<resources>
    <string name="app_name">CarsToSell</string>
    <string name="loginString">Login</string>
    <string name="registerString">Register</string>
    <string name="passwordString">Password</string>
    <string name="no_account_sign_up">Create a new account? Sign Up.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
</resources>